/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.service.statistics.proto;

option java_package = "com.dremio.service.statistics.proto";
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message StatisticId {
  required string table_path = 1;
  required string column = 2;
}

message StatisticMessage {
  optional string tag = 1;
  required int64 created_at = 2;
  optional int64 ndv = 3;
  optional bytes serialized_tdigest = 4;
  optional bytes serialized_cms = 5;
  optional int64 column_row_count = 6;
  optional int64 version = 7;
  optional int64 row_count = 8;
}

message StatisticEntry {
  optional string tag = 1;
  required string jobId = 2;
  optional int64 version = 3;
}
